@@ -314,7 +314,7 @@ project(Deployment_DomainApplication_skel) : dance_output, dance_deployment_skel
   }
 }
 
-project(Deployment_NAM_stub) : dance_output, dance_applicationmanager_stub {
+project(Deployment_NAM_stub) : dance_output, dance_applicationmanager_stub, ami {
   sharedname = DAnCE_NodeApplicationManager_stub
   after += Deployment_NAM_IDL
   dynamicflags = DEPLOYMENT_NODEAPPLICATIONMANAGER_STUB_BUILD_DLL
@@ -330,7 +330,7 @@ project(Deployment_NAM_stub) : dance_output, dance_applicationmanager_stub {
   }
 }
 
-project(Deployment_NAM_skel) : dance_output, dance_applicationmanager_skel, dance_nodeapplicationmanager_stub {
+project(Deployment_NAM_skel) : dance_output, dance_applicationmanager_skel, dance_nodeapplicationmanager_stub, ami {
   sharedname = DAnCE_NodeApplicationManager_skel
   after += Deployment_NAM_stub
   dynamicflags = DEPLOYMENT_NODEAPPLICATIONMANAGER_SKEL_BUILD_DLL
