@@ -1,3 +1,11 @@
+Thu Mar 25 12:14:13 UTC 2010  Martin Corino <mcorino@remedy.nl>
+
+        * Deployment/DAnCE_Core.mpc:
+        * DomainApplicationManager/DomainApplicationManager_Impl.cpp:
+        * DomainApplication/DomainApplication.mpc:
+        * DomainApplication/Domain_Application_Impl.cpp:
+        Fixes for Visual Studio warnings and errors.
+
 Thu Mar 25 11:44:13 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>
 
         * connectors/dds4ccm/performance-tests/LatencyTT/Base/LatencyTT_Test_Base.idl
